fix: edit gap and margin

--- a/src/blocks/events-grid.scss
+++ b/src/blocks/events-grid.scss
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(3, min-content);
   grid-auto-rows: min-content;
   column-gap: 24px;
-  row-gap: 30px;
+  row-gap: 29px;
   padding: 0;
   margin: 0 auto;
 
