--- a/src/blocks/events.scss
+++ b/src/blocks/events.scss
@@ -28,7 +28,7 @@
   align-items: center;
   color: $font-color-light;
   border-radius: 24px;
-  margin: 50px auto 0 auto;
+  margin: 53px auto 0 auto;
   opacity: 1;
   transition: opacity 0.3s ease;
 
